--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
   <name>DuduWeiXin</name>
 
   <properties>
+    <dudu.soa.DuduBaseData>1.1-SNAPSHOT</dudu.soa.DuduBaseData>
+    <dudu.soa.CustomerServiceCenter.version>1.1-SNAPSHOT</dudu.soa.CustomerServiceCenter.version>
     <dudu.soa.baoxian.version>1.0-SNAPSHOT</dudu.soa.baoxian.version>
     <dudu.soa.ahi.version>1.1-SNAPSHOT</dudu.soa.ahi.version>
     <dudu.soa.dududata.version>1.1-SNAPSHOT</dudu.soa.dududata.version>
@@ -145,13 +147,13 @@
       <dependency>
         <groupId>com.dudu.soa</groupId>
         <artifactId>DuduBaseData-api</artifactId>
-        <version>1.1-SNAPSHOT</version>
+        <version>${dudu.soa.dududata.version}</version>
       </dependency>
       <!--加入客户中心依赖-->
       <dependency>
         <groupId>com.dudu.soa</groupId>
         <artifactId>CustomerServiceCenter-api</artifactId>
-        <version>1.1-SNAPSHOT</version>
+        <version>${dudu.soa.CustomerServiceCenter.version}</version>
       </dependency>
 
     </dependencies>
