--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   <name>DuduWeiXin</name>
 
   <properties>
+    <dudu.soa.DuduWeixinDubbo.version>1.0-SNAPSHOT</dudu.soa.DuduWeixinDubbo.version>
     <dudu.soa.DuduBaseData>1.1-SNAPSHOT</dudu.soa.DuduBaseData>
     <dudu.soa.CustomerServiceCenter.version>1.1-SNAPSHOT</dudu.soa.CustomerServiceCenter.version>
     <dudu.soa.baoxian.version>1.0-SNAPSHOT</dudu.soa.baoxian.version>
@@ -154,6 +155,12 @@
         <groupId>com.dudu.soa</groupId>
         <artifactId>CustomerServiceCenter-api</artifactId>
         <version>${dudu.soa.CustomerServiceCenter.version}</version>
+      </dependency>
+    <!--加入duduweixin-dubbo接口-->
+      <dependency>
+        <groupId>com.dudu.soa</groupId>
+        <artifactId>DuduWeixin-dubbo-api</artifactId>
+        <version>${dudu.soa.DuduWeixinDubbo.version}</version>
       </dependency>
 
     </dependencies>
