--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   <name>DuduWeiXin</name>
 
   <properties>
+    <dudu.soa.DuduMessageCenter.version>1.0-SNAPSHOT</dudu.soa.DuduMessageCenter.version>
     <dudu.soa.DuduWeixinDubbo.version>1.0-SNAPSHOT</dudu.soa.DuduWeixinDubbo.version>
     <dudu.soa.DuduBaseData>1.1-SNAPSHOT</dudu.soa.DuduBaseData>
     <dudu.soa.CustomerServiceCenter.version>1.1-SNAPSHOT</dudu.soa.CustomerServiceCenter.version>
@@ -166,6 +167,13 @@
         <groupId>com.dudu.soa</groupId>
         <artifactId>DuduBaoxian-api</artifactId>
         <version>1.0-SNAPSHOT</version>
+      </dependency>
+
+      <!--短信发送-->
+      <dependency>
+        <groupId>com.dudu.soa</groupId>
+        <artifactId>DuduMessageCenter-api</artifactId>
+        <version>${dudu.soa.DuduMessageCenter.version}</version>
       </dependency>
 
     </dependencies>
