--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,9 +20,9 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <welcome-file-list>
-        <welcome-file>Views/index.jsp</welcome-file>
-    </welcome-file-list>
+    <!--<welcome-file-list>-->
+        <!--<welcome-file>Views/index.jsp</welcome-file>-->
+    <!--</welcome-file-list>-->
 
     <servlet>
         <servlet-name>springMVC</servlet-name>
