--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,11 @@
         <artifactId>DuduMessageCenter-api</artifactId>
         <version>${dudu.soa.DuduMessageCenter.version}</version>
       </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
 
     </dependencies>
 
