--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,15 @@
     <dudu.soa.lianmengkabasedata.version>1.1-SNAPSHOT</dudu.soa.lianmengkabasedata.version>
     <dudu.framework.version>1.1-SNAPSHOT</dudu.framework.version>
     <spring.version>4.3.6.RELEASE</spring.version>
+    <dudu.disconf.enable.remote.conf>true</dudu.disconf.enable.remote.conf>
+    <dudu.disconf.conf_server_host>http://disconf.gw.duduchewang.cn</dudu.disconf.conf_server_host>
+    <dudu.disconf.env>rd</dudu.disconf.env>
+    <dudu.disconf.app>DuduSOAConfig</dudu.disconf.app>
+    <dudu.disconf.version>1.0</dudu.disconf.version>
+    <dudu.disconf.debug>true</dudu.disconf.debug>
+    <dudu.disconf.ignore></dudu.disconf.ignore>
+    <dudu.disconf.conf_server_url_retry_times>1</dudu.disconf.conf_server_url_retry_times>
+    <dudu.disconf.conf_server_url_retry_sleep_seconds>1</dudu.disconf.conf_server_url_retry_sleep_seconds>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
