同行圈与课堂

--- a/pom.xml
+++ b/pom.xml
@@ -1,158 +1,174 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.dudu.weixin</groupId>
-  <artifactId>DuduWeiXin</artifactId>
-  <packaging>war</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>DuduWeiXin</name>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.dudu.weixin</groupId>
+    <artifactId>DuduWeiXin</artifactId>
+    <packaging>war</packaging>
+    <version>1.0-SNAPSHOT</version>
+    <name>DuduWeiXin</name>
 
-  <properties>
-    <dudu.soa.SalesCenter.version>1.0-SNAPSHOT</dudu.soa.SalesCenter.version>
-    <dudu.soa.DuduMessageCenter.version>1.0-SNAPSHOT</dudu.soa.DuduMessageCenter.version>
-    <dudu.soa.DuduWeixinDubbo.version>1.0-SNAPSHOT</dudu.soa.DuduWeixinDubbo.version>
-    <dudu.soa.DuduBaseData>1.0-SNAPSHOT</dudu.soa.DuduBaseData>
-    <dudu.soa.CustomerServiceCenter.version>1.0-SNAPSHOT</dudu.soa.CustomerServiceCenter.version>
-    <dudu.soa.baoxian.version>1.0-SNAPSHOT</dudu.soa.baoxian.version>
-    <dudu.soa.ahi.version>1.0-SNAPSHOT</dudu.soa.ahi.version>
-    <dudu.soa.dududata.version>1.0-SNAPSHOT</dudu.soa.dududata.version>
-    <dudu.soa.lianmengka.version>1.0-SNAPSHOT</dudu.soa.lianmengka.version>
-    <dudu.soa.lianmengkabasedata.version>1.0-SNAPSHOT</dudu.soa.lianmengkabasedata.version>
-    <dudu.soa.DuDuFinaceCenter.version>1.0-SNAPSHOT</dudu.soa.DuDuFinaceCenter.version>
-    <dudu.framework.version>1.0-SNAPSHOT</dudu.framework.version>
-    <spring.version>4.3.6.RELEASE</spring.version>
-    <dudu.disconf.enable.remote.conf>true</dudu.disconf.enable.remote.conf>
-    <dudu.disconf.conf_server_host>http://disconf.gw.duduchewang.cn</dudu.disconf.conf_server_host>
-    <dudu.disconf.env>rd</dudu.disconf.env>
-    <dudu.disconf.app>DuduSOAConfig</dudu.disconf.app>
-    <dudu.disconf.version>1.0</dudu.disconf.version>
-    <dudu.disconf.debug>true</dudu.disconf.debug>
-    <dudu.disconf.ignore></dudu.disconf.ignore>
-    <dudu.disconf.conf_server_url_retry_times>1</dudu.disconf.conf_server_url_retry_times>
-    <dudu.disconf.conf_server_url_retry_sleep_seconds>1</dudu.disconf.conf_server_url_retry_sleep_seconds>
+    <properties>
+        <dudu.soa.DuduTrainingClassroom.version>1.0-SNAPSHOT</dudu.soa.DuduTrainingClassroom.version>
+        <dudu.soa.Tonghangquan.version>1.0-SNAPSHOT</dudu.soa.Tonghangquan.version>
+        <dudu.soa.SalesCenter.version>1.0-SNAPSHOT</dudu.soa.SalesCenter.version>
+        <dudu.soa.DuduMessageCenter.version>1.0-SNAPSHOT</dudu.soa.DuduMessageCenter.version>
+        <dudu.soa.DuduWeixinDubbo.version>1.0-SNAPSHOT</dudu.soa.DuduWeixinDubbo.version>
+        <dudu.soa.DuduBaseData>1.0-SNAPSHOT</dudu.soa.DuduBaseData>
+        <dudu.soa.CustomerServiceCenter.version>1.0-SNAPSHOT</dudu.soa.CustomerServiceCenter.version>
+        <dudu.soa.baoxian.version>1.0-SNAPSHOT</dudu.soa.baoxian.version>
+        <dudu.soa.ahi.version>1.0-SNAPSHOT</dudu.soa.ahi.version>
+        <dudu.soa.dududata.version>1.0-SNAPSHOT</dudu.soa.dududata.version>
+        <dudu.soa.lianmengka.version>1.0-SNAPSHOT</dudu.soa.lianmengka.version>
+        <dudu.soa.lianmengkabasedata.version>1.0-SNAPSHOT</dudu.soa.lianmengkabasedata.version>
+        <dudu.soa.DuDuFinaceCenter.version>1.0-SNAPSHOT</dudu.soa.DuDuFinaceCenter.version>
+        <dudu.framework.version>1.0-SNAPSHOT</dudu.framework.version>
+        <spring.version>4.3.6.RELEASE</spring.version>
+        <dudu.disconf.enable.remote.conf>true</dudu.disconf.enable.remote.conf>
+        <dudu.disconf.conf_server_host>http://disconf.gw.duduchewang.cn</dudu.disconf.conf_server_host>
+        <dudu.disconf.env>rd</dudu.disconf.env>
+        <dudu.disconf.app>DuduSOAConfig</dudu.disconf.app>
+        <dudu.disconf.version>1.0</dudu.disconf.version>
+        <dudu.disconf.debug>true</dudu.disconf.debug>
+        <dudu.disconf.ignore></dudu.disconf.ignore>
+        <dudu.disconf.conf_server_url_retry_times>1</dudu.disconf.conf_server_url_retry_times>
+        <dudu.disconf.conf_server_url_retry_sleep_seconds>1</dudu.disconf.conf_server_url_retry_sleep_seconds>
 
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
-  </properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
+    </properties>
     <dependencies>
-      <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>servlet-api</artifactId>
-        <version>2.5</version>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>jsp-api</artifactId>
-        <version>2.0</version>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>jstl</groupId>
-        <artifactId>jstl</artifactId>
-        <version>1.2</version>
-      </dependency>
-      <dependency>
-        <groupId>com.alibaba</groupId>
-        <artifactId>fastjson</artifactId>
-        <version>1.2.22</version>
-      </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.22</version>
+        </dependency>
 
-      <dependency>
-        <groupId>org.jdom</groupId>
-        <artifactId>jdom</artifactId>
-        <version>2.0.2</version>
-      </dependency>
+        <dependency>
+            <groupId>org.jdom</groupId>
+            <artifactId>jdom</artifactId>
+            <version>2.0.2</version>
+        </dependency>
 
-      <dependency>
-        <groupId>com.dudu.soa</groupId>
-        <artifactId>LianmengBaseData-api</artifactId>
-        <version>${dudu.soa.lianmengkabasedata.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.dudu.soa</groupId>
-        <artifactId>DuDuFinaceCenter-api</artifactId>
-        <version>${dudu.soa.DuDuFinaceCenter.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.dudu.soa</groupId>
-        <artifactId>DuduFramework-core</artifactId>
-        <version>${dudu.framework.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.dudu.soa</groupId>
-        <artifactId>DuduFramework-parent-dubbo</artifactId>
-        <version>${dudu.framework.version}</version>
-        <type>pom</type>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-webmvc</artifactId>
-        <version>4.3.2.RELEASE</version>
-      </dependency>
-      <dependency>
-        <groupId>com.dudu.soa</groupId>
-        <artifactId>Lianmengka-api</artifactId>
-        <version>${dudu.soa.lianmengka.version}</version>
-      </dependency>
-      <dependency>
-          <groupId>com.dudu.soa</groupId>
-          <artifactId>DuduData-api</artifactId>
-          <version>${dudu.soa.dududata.version}</version>
-      </dependency>
+        <dependency>
+            <groupId>com.dudu.soa</groupId>
+            <artifactId>LianmengBaseData-api</artifactId>
+            <version>${dudu.soa.lianmengkabasedata.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.dudu.soa</groupId>
+            <artifactId>DuDuFinaceCenter-api</artifactId>
+            <version>${dudu.soa.DuDuFinaceCenter.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.dudu.soa</groupId>
+            <artifactId>DuduFramework-core</artifactId>
+            <version>${dudu.framework.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.dudu.soa</groupId>
+            <artifactId>DuduFramework-parent-dubbo</artifactId>
+            <version>${dudu.framework.version}</version>
+            <type>pom</type>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>4.3.2.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>com.dudu.soa</groupId>
+            <artifactId>Lianmengka-api</artifactId>
+            <version>${dudu.soa.lianmengka.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.dudu.soa</groupId>
+            <artifactId>DuduData-api</artifactId>
+            <version>${dudu.soa.dududata.version}</version>
+        </dependency>
 
-      <dependency>
-        <groupId>com.dudu.soa</groupId>
-        <artifactId>DuduBaoxian-api</artifactId>
-        <version>${dudu.soa.baoxian.version}</version>
-      </dependency>
+        <dependency>
+            <groupId>com.dudu.soa</groupId>
+            <artifactId>DuduBaoxian-api</artifactId>
+            <version>${dudu.soa.baoxian.version}</version>
+        </dependency>
 
-      <dependency>
-        <groupId>com.dudu.soa</groupId>
-        <artifactId>AHI-api</artifactId>
-        <version>${dudu.soa.ahi.version}</version>
-      </dependency>
-      <!--加入嘟嘟基础数据依赖-->
-      <dependency>
-        <groupId>com.dudu.soa</groupId>
-        <artifactId>DuduBaseData-api</artifactId>
-        <version>${dudu.soa.dududata.version}</version>
-      </dependency>
-      <!--加入客户中心依赖-->
-      <dependency>
-        <groupId>com.dudu.soa</groupId>
-        <artifactId>CustomerServiceCenter-api</artifactId>
-        <version>${dudu.soa.CustomerServiceCenter.version}</version>
-      </dependency>
-    <!--加入duduweixin-dubbo接口-->
-      <dependency>
-        <groupId>com.dudu.soa</groupId>
-        <artifactId>DuduWeixin-dubbo-api</artifactId>
-        <version>${dudu.soa.DuduWeixinDubbo.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.dudu.soa</groupId>
-        <artifactId>DuduBaoxian-api</artifactId>
-        <version>1.0-SNAPSHOT</version>
-      </dependency>
+        <dependency>
+            <groupId>com.dudu.soa</groupId>
+            <artifactId>AHI-api</artifactId>
+            <version>${dudu.soa.ahi.version}</version>
+        </dependency>
+        <!--加入嘟嘟基础数据依赖-->
+        <dependency>
+            <groupId>com.dudu.soa</groupId>
+            <artifactId>DuduBaseData-api</artifactId>
+            <version>${dudu.soa.dududata.version}</version>
+        </dependency>
+        <!--加入客户中心依赖-->
+        <dependency>
+            <groupId>com.dudu.soa</groupId>
+            <artifactId>CustomerServiceCenter-api</artifactId>
+            <version>${dudu.soa.CustomerServiceCenter.version}</version>
+        </dependency>
+        <!--加入duduweixin-dubbo接口-->
+        <dependency>
+            <groupId>com.dudu.soa</groupId>
+            <artifactId>DuduWeixin-dubbo-api</artifactId>
+            <version>${dudu.soa.DuduWeixinDubbo.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.dudu.soa</groupId>
+            <artifactId>DuduBaoxian-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
-      <!--短信发送-->
-      <dependency>
-        <groupId>com.dudu.soa</groupId>
-        <artifactId>DuduMessageCenter-api</artifactId>
-        <version>${dudu.soa.DuduMessageCenter.version}</version>
-      </dependency>
+        <!--短信发送-->
+        <dependency>
+            <groupId>com.dudu.soa</groupId>
+            <artifactId>DuduMessageCenter-api</artifactId>
+            <version>${dudu.soa.DuduMessageCenter.version}</version>
+        </dependency>
 
-      <!--消费记录-->
-      <dependency>
-        <groupId>com.dudu.soa</groupId>
-        <artifactId>SalesCenter-api</artifactId>
-        <version>${dudu.soa.SalesCenter.version}</version>
-      </dependency>
+        <!--消费记录-->
+        <dependency>
+            <groupId>com.dudu.soa</groupId>
+            <artifactId>SalesCenter-api</artifactId>
+            <version>${dudu.soa.SalesCenter.version}</version>
+        </dependency>
+
+        <!--同行圈-->
+        <dependency>
+            <groupId>com.dudu.soa</groupId>
+            <artifactId>Tonghangquan-api</artifactId>
+            <version>${dudu.soa.Tonghangquan.version}</version>
+        </dependency>
+        <!--网络学堂-->
+        <dependency>
+            <groupId>com.dudu.soa</groupId>
+            <artifactId>DuduTrainingClassroom-api</artifactId>
+            <version>${dudu.soa.DuduTrainingClassroom.version}</version>
+        </dependency>
+
 
         <dependency>
             <groupId>junit</groupId>
@@ -160,32 +176,32 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-test</artifactId>
-        <version>4.3.2.RELEASE</version>
-        <scope>test</scope>
-      </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>4.3.2.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
-      <resources>
-        <resource>
-          <directory>src/main/java</directory>
-          <includes>
-            <include>**/*.xml</include>
-          </includes>
-          <filtering>false</filtering>
-        </resource>
-        <resource>
-          <directory>src/main/resources</directory>
-          <includes>
-            <include>**/*.properties</include>
-            <include>**/*.xml</include>
-          </includes>
-          <filtering>true</filtering>
-        </resource>
-      </resources>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
     </build>
 
 </project>
