--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,15 @@
             <version>4.3.2.RELEASE</version>
             <scope>test</scope>
         </dependency>
+
+        <!--微信第三方所需要的jar包-->
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
