--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,7 +21,7 @@
     </filter-mapping>
 
     <welcome-file-list>
-        <welcome-file>Views/images.jsp</welcome-file>
+        <welcome-file>Views/index.jsp</welcome-file>
     </welcome-file-list>
 
     <servlet>
