--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.dudu.weixin</groupId>
@@ -40,6 +40,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
+        <dudu.soa.OrderCenter.version>1.0-SNAPSHOT</dudu.soa.OrderCenter.version>
     </properties>
     <dependencies>
         <dependency>
@@ -208,6 +209,14 @@
             <artifactId>commons-fileupload</artifactId>
             <version>1.3</version>
         </dependency>
+
+        <!--联盟微信的订单中心-->
+        <dependency>
+            <groupId>com.dudu.soa</groupId>
+            <artifactId>OrderCenter-api</artifactId>
+            <version>${dudu.soa.OrderCenter.version}</version>
+        </dependency>
+
 
     </dependencies>
 
